// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login react component Enterint text in input changes value 1`] = `
Array [
  <input
    name="username"
    onChange={[Function]}
    placeholder="Username"
    value=""
/>,
  <input
    name="password"
    onChange={[Function]}
    placeholder="Password"
    type="password"
    value=""
/>,
]
`;

exports[`Login react component Enterint text in input changes value 2`] = `
Array [
  <input
    name="username"
    onChange={[Function]}
    placeholder="Username"
    value="haschanged"
/>,
  <input
    name="password"
    onChange={[Function]}
    placeholder="Password"
    type="password"
    value="haschanged"
/>,
]
`;

exports[`Login react component Matches earlier configuration 1`] = `
<div>
  <h1 />
  <p>
    Please log in
  </p>
  <form
    onSubmit={[Function]}
  >
    <div>
      <label
        htmlFor="username"
        required={false}
      >
        Username
      </label>
      <input
        name="username"
        onChange={[Function]}
        placeholder="Username"
        value=""
      />
    </div>
    <div>
      <label
        htmlFor="password"
        required={false}
      >
        Password
      </label>
      <input
        name="password"
        onChange={[Function]}
        placeholder="Password"
        type="password"
        value=""
      />
    </div>
    <button
      disabled={true}
    >
      Form fields not valid
    </button>
  </form>
</div>
`;
